# Spiking-Neural-Data-Lake

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  arm_config.py  arm_sim.py  closed_loop.py  data_quality.py  eth_mnist_bindsnet.py  gesture_recognition.py  live_arm.py  make_results_plot.py  paradigm_b_genn.py  paradigm_b_matcher.py  population_encoding.py  pyproject.toml  record_and_run.ps1  requirements.txt  run_selfchecks.py  sensor_csv_ingest.py  serial_arm.py  signal_loop.py  snn_classifier.py  snn_dreamer_6dof.py  snn_mnist_stdp.py  snn_mnist_stdp_fast.py  snn_moe_classifier.py  snn_moe_stdp_mnist.py  snn_motor_control.py  snn_world_model_rl.py  spike_preprocessing.py  spiking_pid.py  spiking_storage_prototype.py  srm_neuron.py  stats_bounds.py  test_prototype.py  valence_stdp.py
.github/workflows/: ci.yml
docs/: HARDWARE_SETUP.md  RUNNING.md  STORAGE_FORMATS.md  arduino_contract.md  arduino_requirements.md  arduino_requirements.txt  feedback_to_builder.md  feedback_to_builder.txt
gcp/: Dockerfile  README.md  cloudbuild.yaml  composer_dag.py  dataflow_ingest.py  publish_spikes.py  submit_dataflow.sh  submit_vertex.sh
infra/: main.tf
lakehouse/: delta_demo.py  medallion.py
research/: README.md  conceptual-data-storage-method.md  paradigm_b_genn.py  snn_dreamer_6dof.py  snn_mnist_stdp_fast.py  snn_mnist_stdp_genn.py  snn_moe_classifier.py  snn_storage_core_snntorch.py  spike_knowledge_graph.py  temporal_coding_storage.py  training-snns-for-data-storage.md
robot arm/: HAND_APPROACH.csv  HAND_RETREAT.csv  IDLE.csv  sensor_reading.py
robot arm/sensor/: sensor.ino
sketches/: command_arm.ino
src/snn_data_lake/: arm_bridge.py  arm_sim.py  closed_loop.py  cortisol.py  demo.py  gesture_recognition.py  interpreter.py  learned_matcher.py  live_arm.py  paradigm_b_engine.py  paradigm_b_matcher.py  sensor_csv_ingest.py  sensor_demo.py  serial_arm.py  signal_loop.py  spike_telemetry_hub.py  spiking_pid.py  valence_stdp.py
src/snn_data_lake/lakehouse/: medallion.py
