# Installable packaging for the flagship one-command demo (`snn-demo`). The full arm-loop + lake
# stay clone-and-run (pure-stdlib core) by design — see README. Optional dependency groups mirror
# requirements.txt so `pip install .[arm]` / `.[lake]` / `.[gpu]` pull only what a path needs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spiking-neural-data-lake"
version = "0.60.0"
description = "Neuromorphic gesture -> robot-arm control loop + spiking data lakehouse. Zero-dep core, clone-and-run."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aighluvsekks" }]
keywords = ["spiking-neural-network", "neuromorphic", "robotics", "data-lakehouse", "stdp"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # the core is pure standard library — that is the point

[project.optional-dependencies]
arm = ["pyserial"]                                                       # live_arm --serial / --actuate
lake = ["polars", "pyarrow", "deltalake"]                               # lakehouse/medallion + delta_demo
gpu = ["torch", "torchvision", "snntorch==1.0.0", "bindsnet", "numpy"]   # research/ GPU training
nmnist = ["tonic"]                                                       # research/nmnist_ingest real data

[project.scripts]
snn-demo = "demo:main"

[project.urls]
Homepage = "https://github.com/Aighluvsekks/Spiking-Neural-Data-Lake"

[tool.hatch.build.targets.wheel]
only-include = ["demo.py"]
