# Installable src/ package (snn_data_lake). Core is pure-stdlib (empty `dependencies`); optional
# groups mirror requirements.txt. `pip install .` makes every module importable as
# `snn_data_lake.<mod>` + installs the console commands below; `pip install ".[all]"` adds every
# addon (arm+lake+gpu+nmnist). Namespaced -> no top-level collisions (reflex/interpreter/etc).
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spiking-neural-data-lake"
version = "0.60.0"
description = "Neuromorphic gesture -> robot-arm control loop + spiking data lakehouse. Zero-dep core, clone-and-run."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aighluvsekks" }]
keywords = ["spiking-neural-network", "neuromorphic", "robotics", "data-lakehouse", "stdp"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # the core is pure standard library — that is the point

[project.optional-dependencies]
arm = ["pyserial"]                                                       # live_arm --serial / --actuate
lake = ["polars", "pyarrow", "deltalake"]                               # lakehouse/medallion + delta_demo
gpu = ["torch", "torchvision", "snntorch==1.0.0", "bindsnet", "numpy"]   # research/ GPU training
nmnist = ["tonic"]                                                       # research/nmnist_ingest real data
all = ["spiking-neural-data-lake[arm,lake,gpu,nmnist]"]                   # every addon in one install

[project.scripts]
snn-demo = "snn_data_lake.demo:main"         # one-file demo loop
snn-arm  = "snn_data_lake.live_arm:main"     # live gesture -> arm (add --serial/--actuate for hardware)
snn-loop = "snn_data_lake.closed_loop:main"  # full closed loop: gesture -> command -> reward -> learn

[project.urls]
Homepage = "https://github.com/Aighluvsekks/Spiking-Neural-Data-Lake"

[tool.hatch.build.targets.wheel]
packages = ["src/snn_data_lake"]
